--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "node node_modules/webpack-cli/bin/cli.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
