--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "express": "^4.16.4",
+    "express-sslify": "^1.2.0",
     "express-static": "^1.2.6",
     "morgan": "^1.9.1",
     "pug": "^2.0.3",
